Fix GvcChannelMap leak

For each created GvcMixerStream, we created a new channel map.
Make sure it's unref'ed when we're done with it.

https://bugzilla.gnome.org/show_bug.cgi?id=605694